# DeChat

./: LICENSE  README.md
frontend/: index.html  package.json
frontend/src/: crypto.ts  main.ts  storage.ts  ui.ts  webrtc.ts
wasm-core/: Cargo.toml
wasm-core/src/: lib.rs
