[package]
name = "messaging_core"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

hex = "0.4"

rand = "0.8"

x25519-dalek = "2"

ed25519-dalek = "2"

hkdf = "0.12"

sha2 = "0.10"

chacha20poly1305 = "0.10"

getrandom = { version = "0.2", features = ["js"] }
